restart virtual camera when switching scene collection

--- a/data/config/config.ini
+++ b/data/config/config.ini
@@ -10,3 +10,43 @@ VolumeMeter=true
 VolumeSlider=true
 AudioMonitor=true
 VirtualCamera=true
+[🎥 WEBCAM]
+Icon=false
+Device=true
+Properties=true
+Filters=true
+Restart=true
+Monitor=false
+Retain=true
+VolumeMeter=false
+VolumeSlider=false
+[Mic/Aux]
+Icon=true
+Device=true
+Properties=false
+Filters=true
+Restart=true
+Monitor=true
+Retain=true
+VolumeMeter=true
+VolumeSlider=true
+[wasapi_input_capture]
+Icon=true
+Device=true
+Properties=false
+Filters=true
+Restart=true
+Monitor=true
+Retain=true
+VolumeMeter=true
+VolumeSlider=true
+[dshow_input]
+Icon=true
+Device=true
+Properties=true
+Filters=true
+Restart=true
+Monitor=false
+Retain=true
+VolumeMeter=false
+VolumeSlider=false
